Added a plain text link to the header of index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="plaintext" href="tencent13420717339897024694.txt">
     <title>Concord Music | 搿艺音乐</title>
   </head>
   <body>
